# demo-performance-api

./: .gitignore  Dockerfile  README.md  azure.tf  pyproject.toml  template.env
.github/workflows/: cicd.yaml
app/: caching.py  config.py  main.py  schemas.py
app/data_acess/: db.py  models.py  repositories.py
helm/: Chart.yaml  values.yaml
helm/templates/: api-deployment.yaml  ingress.yaml  scaledobject.yaml
tests/: conftest.py  test_schemas.py
