[tool.poetry]
name = "demo-performance-api"
version = "0.1.0"
description = ""
authors = ["MaxHoefl <hoefl.max@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
SQLAlchemy = "^2.0.28"
aioodbc = "^0.5.0"
pydantic = "^2.6.4"
loguru = "^0.7.2"
redis = "^5.0.3"
uvicorn = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
