[tool.poetry]
name = "demo-performance-api"
version = "0.1.0"
description = ""
authors = ["MaxHoefl <hoefl.max@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
SQLAlchemy = "^2.0.28"
aioodbc = "^0.5.0"
pydantic = "^2.6.4"
loguru = "^0.7.2"
redis = "^5.0.3"
uvicorn = "^0.28.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
greenlet = "^3.0.3"
pandas = "^2.2.1"
cachetools = "^5.3.3"
asyncache = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.3"
pytest-sqlalchemy-mock = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
